--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body class="homepage"> 
     <div class="row">
       <div class="container"> 
-        <img class="profile-photo" src="placeholder.svg">
+        <img class="profile-photo" src="profile.jpg">
         <h1>Ian Winter</h1>
-        <h3>1 line bio goes here</h3>
+        <h3>adventurer & photographer</h3>
       </div>
     </div>
 
