--- a/index.html
+++ b/index.html
@@ -29,22 +29,21 @@
     <div class="row">
       <div class="container">
         <div class="col-md-12">
-          <div class="break"></div>
+          <div class="break break-shadow"></div>
         </div>
         <div class="col-md-12">
-          <a class="button" href="https://www.flickr.com/photos/128562027@N03/">
+          <a class="button" href="photoalbum.html">
             <h3>Photo Album</h3>
           </a>
           <div class="spacer"></div>
           <a class="button" href="https://www.flickr.com/photos/128562027@N03/">
             <h3>Videos</h3>
           </a>
-          <div class="spacer"></div>
-          <!--  
+          <div class="spacer"></div>  
           <a class="button" href="">
             <h3>Adventure Log</h3>
-          </a>
-          -->        
+          </a>       
+          <div class="spacer"></div>  
           <a class="button" href="mailto:iwin5170@gmail.com?Subject=Hi">
             <h3>Contact</h3>
           </a>
