--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h3>Photo Album</h3>
           </a>
           <div class="spacer"></div>
-          <a class="button" href="https://www.flickr.com/photos/128562027@N03/">
+          <a class="button" href="videos.html">
             <h3>Videos</h3>
           </a>
           <div class="spacer"></div>  
